--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ supabase>=2.3.0
 python-dotenv>=1.0.0
 pydantic>=2.5.0
 pydantic-settings>=2.1.0
+email-validator>=2.1.0
 
 # ============ Frontend (Streamlit) ============
 streamlit>=1.30.0
