feat: Establish initial application architecture with frontend UI, backend API for authentication, assignments, submissions, and reviews, and role-based access control.

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ python-dotenv>=1.0.0
 pydantic>=2.5.0
 pydantic-settings>=2.1.0
 email-validator>=2.1.0
+argon2-cffi>=23.1.0
 
 # ============ Frontend (Streamlit) ============
 streamlit>=1.30.0
