--- a/frontend/requirements.txt
+++ b/frontend/requirements.txt
@@ -4,3 +4,6 @@ python-dotenv>=1.0.0
 Pillow>=10.2.0
 extra-streamlit-components>=0.1.70
 plotly
+supabase>=2.0.0
+argon2-cffi>=21.0.0
+python-jose>=3.3.0
